--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "framer-motion": "^10.2.4",
+    "mongoose": "^7.0.1",
+    "nodemon": "^2.0.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0"
