updated server folder structure
added middleware
added controller
added utility

--- a/server/.env
+++ b/server/.env
@@ -1,10 +1,2 @@
-DB = "mongodb+srv://innuo:336572@innuocluster.1qrimuv.mongodb.net/test"
-JWTPRIVATEKEY = "innuo"
-SALT = 10
-BASE_URL = "http://localhost:7000/"
-HOST = smtp.gmail.com
-EMAIL_PORT = 587
-SERVICE = gmail
-SECURE = true
-USER = "teaminnuo@gmail.com"
-PASS = "uhtfntyroxcqetif"
+MONGO = mongodb+srv://innuo:336572@innuocluster.1qrimuv.mongodb.net/innuo
+JWT_KEY = 84cf232a0d16867b4269b3d4c6e79f04
