--- a/.gitignore
+++ b/.gitignore
@@ -18578,3 +18578,5 @@ server/node_modules/yallist/LICENSE
 server/node_modules/yallist/package.json
 server/node_modules/yallist/README.md
 server/node_modules/yallist/yallist.js
+server/.env
+server/.env
