--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-lottie-player": "^1.5.4",
     "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
