--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
 MONGO = mongodb+srv://innuo:336572@innuocluster.1qrimuv.mongodb.net/innuo
 JWT_KEY = 84cf232a0d16867b4269b3d4c6e79f04
+SECURE = true
