css fixing, upload fixing

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 MONGO = mongodb+srv://innuo:336572@innuocluster.1qrimuv.mongodb.net/innuo
 JWT_KEY = 84cf232a0d16867b4269b3d4c6e79f04
-CLOUD_NAME = dgcmjva7h
+REACT_APP_CLOUD_NAME = dgcmjva7h
