registration with email link

--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,11 @@
 MONGO = mongodb+srv://innuo:336572@innuocluster.1qrimuv.mongodb.net/innuo
 JWT_KEY = 84cf232a0d16867b4269b3d4c6e79f04
 REACT_APP_CLOUD_NAME = dgcmjva7h
+
+HOST = smtp.gmail.com
+EMAIL_PORT = 587
+SERVICE = gmail
+SECURE = true
+USER = "teaminnuo@gmail.com"
+PASS = "uhtfntyroxcqetif"
+TOKEN = 84cf232a0d16867b4269b3d4c6e79f04
