--- a/server/.env
+++ b/server/.env
@@ -7,5 +7,5 @@ EMAIL_PORT = 587
 SERVICE = gmail
 SECURE = true
 USER = "teaminnuo@gmail.com"
-PASS = "uhtfntyroxcqetif"
+PASS = "qndqeorntbuqxsug"
 TOKEN = 84cf232a0d16867b4269b3d4c6e79f04
